[package]
name = "opt-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
clap = "4.3.12"
serde = { version = "1.0.167", features = ["derive"]}
serde_json = "1.0"
tokio = { version="1.29.1", features = ["full"] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
tree-sitter-traversal = "0.1.2"
bat = "0.23.0"